--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    padding-inline-start: 0px;
+}
+
 :root{
     --colorPrimario: #443d5b;
     --colorSecundario: #fff;
+    --grid-column-gap: 0px;
 }
 
 body{
@@ -15,6 +23,7 @@ body{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    z-index: 1000;
 }
 
 .menu__flotante .dropdown-toggle::after{
@@ -102,4 +111,199 @@ body{
     font-size: 4.5rem;
 }
 
+/* Fin Inicio */
 
+/* Proyectos */
+.page__name{
+    position: absolute;
+    z-index: 500;
+    top:13vh;
+    left: 2.5vw;
+}
+.page__name h1{
+    padding: 1rem;
+    font-size: 1.5rem;
+    background-color: #fff;
+    color: var(--colorPrimario);
+}
+
+.scrolly{
+    height:100vh;
+} 
+.carouselPre{
+    grid-auto-flow: column;
+    display: grid;
+    grid-auto-columns: calc((100% - 3 * var(--grid-column-gap))/ 3);
+    grid-column-gap: var(--grid-column-gap);
+    scroll-snap-type: x mandatory;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    list-style: none;
+    scroll-behavior: smooth;
+    height: 100%;
+    
+}
+
+#title{
+    margin: 10px 10px 10px 0;
+    font-size: 34px;
+    font-weight: 600;
+}
+
+.topT{
+    border-top: 1px solid rgb(212, 212, 212);
+    padding: 10px 0;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.itemsC .textDet{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    background-color: #fff;
+}
+
+.contents{
+    color: var(--colorPrimario);
+}
+
+.itemsC .contents h2{    
+    -webkit-line-clamp: 3;
+    text-align: left;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    font-size: 1.5rem;
+    line-height: 1.25;
+    font-weight: 400;
+    width: 90%;
+    margin: auto;
+}
+.itemsC .contents p{    
+    -webkit-line-clamp: 3;
+    text-align: left;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    font-size: 1rem;
+    line-height: 1.25;
+    font-weight: 400;
+    width: 90%;
+    margin: auto;
+}
+
+.leftTxtDet{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top: 33px;
+}
+
+.itemsC{
+    position: relative;
+}
+
+.scrolly{
+    overflow: hidden;
+}
+
+.carouselPre li{
+    scroll-snap-align: start;
+    width: 100%;
+    height: 100%;
+    background-color: royalblue;
+    list-style: none;
+    overflow: hidden;
+}
+
+.carouselPre li .bgImg{
+    width: 100%;
+    height: 100%;
+}
+
+.carouselPre li img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.scrolly{
+    position: relative;
+}
+
+#left,#right{
+    background-color: rgba(255, 255, 255, 0.9);
+    outline: none;
+    border: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 6rem;
+    position: absolute;
+    top: 50%;
+    transform: translate(0,-60%);
+    cursor: pointer;
+    z-index: 2;
+}
+
+#left{
+    left: 1.5vw;
+}
+
+#right{
+    right: 1.5vw;
+}
+
+@media only screen and (max-width: 890px) {
+    .carouselPre {
+        grid-auto-columns: calc((100% - 2 * var(--grid-column-gap))/ 2);
+        height: 23rem;
+    }
+}
+
+@media only screen and (max-width: 660px) {
+    .carouselPre {
+        grid-auto-columns: calc((100% - 1 * var(--grid-column-gap))/ 1);
+        height: 25rem;
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    .carouselPre {
+        grid-auto-columns: 100%;
+        height: 25rem;
+    }
+}
+
+
+::-webkit-scrollbar {    
+width: 15px;
+height: 15px;
+border-left: #ededed solid 1px;
+background-color: #fcfcfc;
+border-top: #ededed solid 1px;
+    }
+
+::-webkit-scrollbar-thumb:hover{
+cursor: pointer;
+background: #c7c7c7;
+width: 15px;
+    background-clip: content-box;
+    border: 4px solid transparent;
+border-radius: 10px;
+}
+
+    ::-webkit-scrollbar-button {   
+display: none;
+    }
+
+    ::-webkit-scrollbar-thumb {
+background: #dbdbdb;
+    background-clip: content-box;
+    border: 4px solid transparent;
+border-radius: 10px;
+
+    }  
