--- a/views/projects.html
+++ b/views/projects.html
@@ -7,8 +7,79 @@
     <title>Proyectos - Prueba tecnica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/fonts/fonts.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
-    
+    <div class="menu__flotante">
+        <div class="btn-group">
+            <button class="btn btn-light btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-bars menu__icono"></i><span class="menu__texto">menu</span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="../index.html">inicio</a></li>
+                <li><a class="dropdown-item" href="#">about</a></li>
+                <li><a class="dropdown-item" href="./projects.html">proyectos</a></li>
+                <li><a class="dropdown-item" href="#">nuestro equipo</a></li>
+                <li><a class="dropdown-item" href="#">encuentranos</a></li>
+                <li><a class="dropdown-item d-block d-sm-none" href="./projects.html">contacto</a></li>
+            </ul>
+        </div>
+        <div class="branding text-center">
+            <a href="../index.html">
+                <img class="logo" src="../assets/img/logo-oscuro.png" alt="Logo Oscuro">
+            </a>
+        </div>
+        <div class="btn-group d-none d-sm-flex">
+            <a class="btn btn-light btn-lg dropdown-toggle" href="#">
+                <img class="menu__icono" src="../assets/img/Ellipse.png" alt="Contacto Icono"><span class="menu__texto">contacto</span>
+            </a>
+        </div>
+    </div> 
+    <div class="page__name">
+        <h1>Proyectos</h1>
+    </div> 
+    <div class="scrolly">
+        
+        <button id="left"><span class="material-icons">chevron_left</span></button>
+        <button id="right"><span class="material-icons">chevron_right</span></button>
+    <ul class="carouselPre p-0">
+        <li class="itemsC">
+            
+            <div class="bgImg"><img src="https://lastfm.freetls.fastly.net/i/u/ar0/e79f7269fcfb07e2beb25f573eb75125.jpg" alt="image" srcset=""></div>
+        </li>
+        <li class="itemsC">
+            <div class="contents">
+                <div class="textDet d-flex flex-column py-4"><h2>Project Name</h2><p>Billie Eilish, Jai Wolf, Kelly Clarkson, DNCE, P!nk, Jason Derulo, Ed Sheeran, WALK THE MOON, Billie Eilish, Ritt Momney, Jonas Brothers, Shawn Mendes</p></div>
+            </div>
+            <div class="bgImg"><img src="https://pbs.twimg.com/media/EFeJlnYWwAAT-A5.jpg" alt="image" srcset=""></div>
+        </li>
+        <li class="itemsC">
+            
+            <div class="bgImg"><img src="https://i.pinimg.com/736x/46/73/28/46732810e13cdc88864b03b5e234c58a.jpg" alt="image" srcset=""></div>
+        </li>
+        <li class="itemsC">
+            
+            <div class="bgImg"><img src="https://i.pinimg.com/736x/46/73/28/46732810e13cdc88864b03b5e234c58a.jpg" alt="image" srcset=""></div>
+        </li>
+        <li class="itemsC">
+            
+            <div class="bgImg"><img src="https://i.pinimg.com/736x/46/73/28/46732810e13cdc88864b03b5e234c58a.jpg" alt="image" srcset=""></div>
+        </li>
+        <li class="itemsC">
+            
+            <div class="bgImg"><img src="https://i.pinimg.com/736x/46/73/28/46732810e13cdc88864b03b5e234c58a.jpg" alt="image" srcset=""></div>
+        </li>
+        
+
+    </ul>
+</div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
