--- a/views/projects.html
+++ b/views/projects.html
@@ -24,7 +24,7 @@
                 <li><a class="dropdown-item" href="./projects.html">proyectos</a></li>
                 <li><a class="dropdown-item" href="#">nuestro equipo</a></li>
                 <li><a class="dropdown-item" href="#">encuentranos</a></li>
-                <li><a class="dropdown-item d-block d-sm-none" href="./projects.html">contacto</a></li>
+                <li><a class="dropdown-item d-block d-sm-none" href="./contact.html">contacto</a></li>
             </ul>
         </div>
         <div class="branding text-center">
@@ -33,7 +33,7 @@
             </a>
         </div>
         <div class="btn-group d-none d-sm-flex">
-            <a class="btn btn-light btn-lg dropdown-toggle" href="#">
+            <a class="btn btn-light btn-lg dropdown-toggle" href="./contact.html">
                 <img class="menu__icono" src="../assets/img/Ellipse.png" alt="Contacto Icono"><span class="menu__texto">contacto</span>
             </a>
         </div>
