--- a/views/projects.html
+++ b/views/projects.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    /* SEO Metatags */
+
+    <meta property="og:locale" content="es_MX" />
+	<meta property="og:type" content="page" />
+	<meta property="og:title" content="Proyectos - AIRhitect" />
+	<meta property="og:description" content="Aqu' encontraras todos los proyectos de AIRhitect" />
+	<meta property="og:url" content="https://entrevista-tecnica.vercel.app/views/projects.html" />
+	<meta property="og:site_name" content="Proyectos - Prueba tecnica" />
+	<meta property="article:published_time" content="2021-05-31T04:15:08+00:00" />
+	<meta property="article:modified_time" content="2021-05-31T04:48:54+00:00" />
+	<meta property="og:image" content="https://entrevista-tecnica.vercel.app/assets/img/proyectos.png" />
+	<meta property="og:image:width" content="1280" />
+	<meta property="og:image:height" content="720" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:creator" content="@airhitect" />
+	<meta name="twitter:site" content="@airhitect" />
+	<meta name="twitter:label1" content="Escrito por">
+	<meta name="twitter:data1" content="8agency">
+	<meta name="twitter:label2" content="Tiempo de lectura">
+	<meta name="twitter:data2" content="2 minutos">
+
+    /* SEO Metatags */
+
     <title>Proyectos - Prueba tecnica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
