--- a/views/projects.html
+++ b/views/projects.html
@@ -8,7 +8,7 @@
     <meta property="og:locale" content="es_MX" />
 	<meta property="og:type" content="page" />
 	<meta property="og:title" content="Proyectos - AIRhitect" />
-	<meta property="og:description" content="Aqu' encontraras todos los proyectos de AIRhitect" />
+	<meta property="og:description" content="Aquí encontraras todos los proyectos de AIRhitect" />
 	<meta property="og:url" content="https://entrevista-tecnica.vercel.app/views/projects.html" />
 	<meta property="og:site_name" content="Proyectos - Prueba tecnica" />
 	<meta property="article:published_time" content="2021-05-31T04:15:08+00:00" />
